openshift/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: perfect-node-dockerfile-openshift-dc
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        traffic: "true"
    spec:
      containers:
        - image: docker-registry.default.svc:5000/web-backend/perfect-node-dockerfile-openshift:latest
          imagePullPolicy: Always
          name: perfect-node-dockerfile-openshift-container
          ports:
            - containerPort: 8080
              protocol: "TCP"
          # command: ["/bin/sh", "-c", "while true ; do date; sleep 1; done;"]
  # triggers:
  # - type: ConfigChange
