openshift/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: perfect-node-dockerfile-openshift-service
spec:
  selector:
    traffic: "true"
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
