openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: perfect-node-dockerfile-openshift-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: perfect-node-dockerfile-openshift-service
